--- a/main.css
+++ b/main.css
@@ -80,6 +80,24 @@ body{
   color: white;
   cursor: pointer;
 }
+
+#quit{
+  display: none;
+  text-align: center;
+  width: 120px;
+  height: 50px;
+  margin: 10px;
+  font-size: 20px;
+  color: yellow;
+  background-color: black;
+  outline: 7px double white;
+}
+#quit:hover{
+  outline: 7px double yellow;
+  color: white;
+  cursor: pointer;
+}
+
 .mainFoot{
   max-width: 800px;
   height: 100px;
